objects/amazonconnect__AC_VoiceIdChannel__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__AuthenticationResultDecision__c</fullName>
        <label>Authentication Result Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authenticated</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>NotAuthenticated</fullName>
                </value>
                <value>
                    <fullName>NotEnabled</fullName>
                </value>
                <value>
                    <fullName>NotEnrolled</fullName>
                </value>
                <value>
                    <fullName>OptedOut</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__AuthenticationResultScore__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Authentication Result Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Voice Id Channel Case</relationshipLabel>
        <relationshipName>Voice_Id_Channel_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__CustomerNumber__c</fullName>
        <label>Customer Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__FraudDetectionResultDecision__c</fullName>
        <label>Fraud Detection Result Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotEnabled</fullName>
                </value>
                <value>
                    <fullName>HighRisk</fullName>
                </value>
                <value>
                    <fullName>LowRisk</fullName>
                </value>
                <value>
                    <fullName>Inconclusive</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__FraudDetectionResultReasons__c</fullName>
        <label>Fraud Detection Result Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KNOWN_FRAUDSTER</fullName>
                </value>
                <value>
                    <fullName>REPLAYED_SPEECH</fullName>
                </value>
                <value>
                    <fullName>SYNTHETIC_SPEECH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__FraudDetectionResultRiskDetails__c</fullName>
        <label>Fraud Detection Result Risk Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SfContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Voice ID Channel Contact</relationshipLabel>
        <relationshipName>Voice_Id_Channel_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SpeakerId__c</fullName>
        <label>Speaker Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Status__c</fullName>
        <label>Speaker Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPT_OUT</fullName>
                </value>
                <value>
                    <fullName>ENROLLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AC Voice Id Channel</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Voice Id Channel {000000000}</displayFormat>
        <label>AC Voice Id Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Voice Id Channel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>